kubernetes/clusters/main/home-automation/esphome/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: home-automation
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
spec:
  ingressClassName: nginx
  rules:
  - host: "esphome.nucstack.com"
    http:
      paths:
      - backend:
          service:
            name: esphome
            port:
              number: 6052
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "esphome.nucstack.com"
